# localedit

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  flake.nix  main.cpp  resources.qrc  sonar-project.properties
.github/workflows/: build.yml  clang-tidy.yaml  cross-ci.yaml
gui/: APBPushButton.cpp  APBPushButton.h  FramelessMainWindow.cpp  FramelessMainWindow.h  MainWindow.cpp  MainWindow.h  MissionListWidget.cpp  MissionListWidget.h  PreviewBox.cpp  PreviewBox.h  PreviewBoxWidget.cpp  PreviewBoxWidget.h  StagesEditorWidget.cpp  StagesEditorWidget.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  resources.qrc
gui/MissionList/: MissionListItem.cpp  MissionListItem.h  MissionListWidget.cpp  MissionListWidget.h
gui/StagesEditor/: ExpandedTextEdit.cpp  ExpandedTextEdit.h  FramedPage.cpp  FramedPage.h  StagesEditorWidget.cpp  StagesEditorWidget.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
gui/StagesEditor/TabWidget/: ExpandingTabBar.cpp  ExpandingTabBar.h
gui/TabWidget/: ExpandingTabBar.cpp  ExpandingTabWidget.cpp  ExpandingTabWidget.h
gui/Utility/: LayoutUtils.cpp  LayoutUtils.h
missions/: TaskObjectives.INT
src/: MainWindow.cpp  MainWindow.h  PreviewBoxWidget.cpp  PreviewBoxWidget.h  main.cpp  resources.qrc
src/APBFramelessWindow/: APBFramelessWindowTitleBar.cpp  APBFramelessWindowTitleBar.h  APBPushButton.cpp  APBPushButton.h  NativeTranslucentFramelessWindow.cpp  NativeTranslucentFramelessWindow.h
src/Components/: MessageBox.cpp  MessageBox.h
src/MissionList/: MissionListWidget.h
src/StagesEditor/: ExpandedTextEdit.cpp  StagesEditorWidget.cpp  StagesEditorWidget.h
src/StagesEditor/TabWidget/: ExpandingTabBar.cpp  ExpandingTabBar.h  ExpandingTabWidget.cpp  FramedPage.cpp  FramedPage.h
src/Utility/: LayoutUtils.h
src/resources/: named_colors.txt
